# uptimed

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  proc.rs  serde_duration.rs
