[package]
name = "uptimed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
notify-rust = "4.8.0"
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"
signal-hook = "0.3.15"
tokio = { version = "1.27.0", features = [ "rt", "macros", "rt-multi-thread" ] }
yaml-rust = "0.4.5"
